<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sort">"Sort"</string>
    <string name="sort_by_name">"Name"</string>
    <string name="sort_by_date">"Date modified"</string>
    <string name="sort_by_time">"Date"</string>
    <string name="sort_by_type">"Type"</string>
    <string name="sort_by_size">"Size"</string>
    <string name="copy">"Copy"</string>
    <string name="create_folder">"Create"</string>
    <string name="cut">"Cut"</string>
    <string name="delete">"Delete"</string>
    <string name="delete_confirm">"Confirm delete"</string>
    <string name="deselect_all">"Deselect all"</string>
    <string name="select_all">"Select all"</string>
    <string name="show_file">"Show hidden files"</string>
    <string name="hide_file">"Hide hidden files"</string>
    <string name="paste">"Paste"</string>
    <string name="rename">"Rename"</string>
    <string name="share">"Share"</string>
    <string name="viewby_list">"View by list"</string>
    <string name="viewby_grid">"View by grid"</string>
    <string name="alert_delete_message">"Delete"</string>
    <string name="multi_alert_delete_message">"Delete selected items?"</string>
    <string name="multi_alert_delete_message_cn">"Delete selected items?"</string>
    <string name="delete_folder_message">"Delete the album and all pictures in it?"</string>
    <string name="category_pictures">"Pictures"</string>
    <string name="category_vedios">"Videos"</string>
    <string name="category_music">"Music"</string>
    <string name="category_download">"Downloads"</string>
    <string name="category_bluetooth">"Bluetooth"</string>
    <string name="app_name">"FileManager"</string>
    <string name="theme_name">"FileManager"</string>
    <string name="apk_name">"Files"</string>
    <string name="new_folder">"Create new folder"</string>
    <string name="confirm_rename">"Confirm name"</string>
    <string name="warning">"Maximum file amount"</string>
    <string name="share_warning">"You can’t share more than 100 files."</string>
    <string name="loading">"Loading..."</string>
    <string name="deleting">"Deleting"</string>
    <string name="alert_delete_multiple">"Selected files will be deleted."</string>
    <string name="name">"Name"</string>
    <string name="size">"Size"</string>
    <string name="modified_time">"Modified"</string>
    <string name="msg_rename_ext">"File extension will be changed. File might not be recognised. Continue?"</string>
    <string name="wait">"Please wait..."</string>
    <string name="done">"Done"</string>
    <string name="enable">"Enable"</string>
    <string name="enable_cn">"Enable"</string>
    <string name="cancel">"Cancel"</string>
    <string name="no">"No"</string>
    <string name="ok">"OK"</string>
    <string name="yes">"Yes"</string>
    <string name="details">"File details"</string>
    <string name="drawer_open">"Open"</string>
    <string name="unknown">"unknown"</string>
    <string name="unit_B">"B"</string>
    <string name="unit_KB">"KB"</string>
    <string name="unit_MB">"MB"</string>
    <string name="unit_GB">"GB"</string>
    <string name="unit_TB">"TB"</string>
    <string name="send_file">"Share file(s) via"</string>
    <string name="default_search_text">"Search files"</string>
    <string name="free_space">"Available"</string>
    <string name="total_space">"Total space"</string>
    <string name="drawer_category">"Categories"</string>
    <string name="phone_storage">"Phone storage"</string>
    <string name="phone_storage_cn">"Phone storage"</string>
    <string name="sd_card">"SD card"</string>
    <string name="draw_left_phone_storage">"Phone"</string>
    <string name="draw_left_sd_card">"SD card"</string>
    <string name="menu_settings">"Settings"</string>
    <string name="no_search_result">"0 file(s) found for \"%1$s\""</string>
    <string name="copy_deny">"No permission to copy."</string>
    <string name="cut_deny">"No permission to cut."</string>
    <string name="delete_deny">"No permission to delete."</string>
    <string name="insufficient_memory">"Insufficient space"</string>
    <string name="insufficient_message">"Couldn\'t copy some files due to insufficient space"</string>
    <string name="invalid_empty_name">"File or folder name can\'t be empty."</string>
    <string name="paste_same_folder">"Couldn\'t cut to the source folder"</string>
    <string name="invalid_char_prompt">"You have typed an invalid character."</string>
    <string name="msg_unable_open_file">"The file format is not supported."</string>
    <string name="paste_sub_folder">"Can\'t paste to subfolder."</string>
    <string name="operation_fail">"Some file operation failed."</string>
    <string name="search_result">"%2$d result(s) for \"%1$s\""</string>
    <string name="already_exists">"%1$s is already in use."</string>
    <string name="unmounted">"%1$s is unmounted"</string>
    <string name="create_hidden_file">"File will be hidden if its name starts with \'.\'."</string>
    <string name="file_name_too_long">"The input name is too long."</string>
    <string name="some_paste_fail">"Some paste operations failed."</string>
    <string name="delete_fail">"Couldn\'t delete"</string>
    <string name="some_delete_fail">"Some delete operations failed."</string>
    <string name="msg_unable_open_file_in_app">"No app to open file"</string>
    <string name="drm_forwardforbidden_title">"Not Forward"</string>
    <string name="drm_forwardforbidden_message">"The DRM file can\'t forward."</string>
    <string name="drm_no_valid_right">"File has no valid DRM authority."</string>
    <string name="drm_current_count">"Current count:"</string>
    <string name="unlimited_usage">"Unlimited usage"</string>
    <string name="drm_current_right">"Current constraint:"</string>
    <string name="not_available">"Not available"</string>
    <string name="right_url">"Licences Issuer URL:"</string>
    <string name="use_times">"Use %s times"</string>
    <string name="valid_after">"Valid after"</string>
    <string name="valid_until">"Valid until"</string>
    <string name="drm_wifidisplay_title">"Copy-protected files"</string>
    <string name="drm_wifidisplay_message">"Copy-protected file can\'t be distributed."</string>
    <string name="drm_wifidisplay_cancel_btn">"Turn off Wi-Fi Display"</string>
    <string name="drm_wifidisplay_ok">"OK"</string>
    <string name="tv_link_close_toast">"Wi-Fi Display has been closed"</string>
    <string name="usbotg">"External USB storage"</string>
    <string name="show">"Show system files"</string>
    <string name="hide">"Hide system files"</string>
    <string name="action_menu_create_folder_button">"create folder"</string>
    <string name="searchResult">"Search result"</string>
    <string name="default_folder_name">"Folder name"</string>
    <string name="drm_protection_status">"Protection status:"</string>
    <string name="drm_can_forward">"Can be forwarded."</string>
    <string name="drm_can_not_forward">"Can\'t be forwarded"</string>
    <string name="drm_no_license">"No available DRM license."</string>
    <string name="drm_interval">"Valid for %s after first time use"</string>
    <string name="drm_begin">"Begin:"</string>
    <string name="drm_no_limitation">"No limitation"</string>
    <string name="drm_end">"End:"</string>
    <string name="drm_use_left">"Remains:"</string>
    <string name="drm_no_crop">"File %s" isn\'t allowed to be cropped because the file is DRM protected."</string>
    <string name="file_copy">"File copied"</string>
    <string name="choice_file">"Choose destination"</string>
    <string name="alert_delete_single">"The selected file will be deleted."</string>
    <string name="pasting">"Pasting"</string>
    <string name="readable">"Readable:"</string>
    <string name="executable">"Application:"</string>
    <string name="writable">"Writable:"</string>
    <string name="add_favorite">"Add to favourite folder"</string>
    <string name="del_favorite">"Delete from favourite folder"</string>
    <string name="favourite">"Add to Favourites"</string>
    <string name="viewby_details">"View by details"</string>
    <string name="view_by">"View by"</string>
    <string name="show_hide">"Show\\Hide"</string>
    <string name="sort_by">"Sort by"</string>
    <string name="more">"More"</string>
    <string name="used">"used"</string>
    <string name="category_archives">"Archives"</string>
    <string name="category_favorite">"Favourites"</string>
    <string name="category_ringtones">"Ringtones"</string>
    <string name="category_recordings">"Recordings"</string>
    <string name="category_safebox">"Safebox"</string>
    <string name="category_apks">"APKs"</string>
    <string name="search">"Search"</string>
    <string name="sort_type">"Sort by type"</string>
    <string name="sort_name">"Sort by name (A-Z)"</string>
    <string name="sort_size">"Sort by size (big-small)"</string>
    <string name="sort_time">"Sort by time (new-old)"</string>
    <string name="selected">"Selected"</string>
    <string name="save">"Save"</string>
    <string name="category_docs">"Docs"</string>
    <string name="category_files">"Files"</string>
    <string name="view_as_grid">"View as grid"</string>
    <string name="view_as_list">"View as list"</string>
    <string name="detail_path">"Location:"</string>
    <string name="detail_name">"Name:"</string>
    <string name="detail_size">"Size:"</string>
    <string name="detail_time">"Last modified:"</string>
    <string name="empty_msg">"(Empty Folder)"</string>
    <string name="search_files">"Search files"</string>
    <string name="search_result_count">"found"</string>
    <string name="drawer_settings">"SETTINGS"</string>
    <string name="search_text_empty">"Search content shouldn\'t be empty."</string>
    <string name="search_result_title">"Search result(s)"</string>
    <string name="path_not_exists">"%1$s doesn\'t exist"</string>
    <string name="view_grid">"Grid view"</string>
    <string name="add_folder">"Create folder"</string>
    <string name="menu_detail">"Details"</string>
    <string name="permission_welcome_title">"Permission needed"</string>
    <string name="permission_msg">"Better service for you"</string>
    <string name="permission_setting_title">"Grant access"</string>
    <string name="permission_setting_content">"Change permissions in your device\'s app settings. Give File Manager access to storage."</string>
    <string name="set_password_safe_question_answer">"Answer"</string>
    <string name="set_password_safe_forget_pass">"Remember the answers of security issues. If you forget your password, you can reset by answering security issues."</string>
    <string name="destory_safe_cn">"Destroy safe box"</string>
    <string name="input_password">"Input password"</string>
    <string name="forget_password">"Forget password"</string>
    <string name="others">"Others"</string>
    <string name="destory_safe_dialog_message">"Files in safe box and password will be all deleted. Destroy now?"</string>
    <string name="destory_safe_dialog_checkbox_cn">"Remove files at the same time"</string>
    <string name="chip_encryption">Chip encryption</string>
    <string name="edit">"Edit"</string>
    <string name="welcome_convenient">"Convenient"</string>
    <string name="welcome_convenient_info">"Can be classified in the encrypted file.\nView all encrypted files"</string>
    <string name="welcome_add">"ADD"</string>
    <string name="welcome_add_info">"Click on the top right corner of the menu to add file encryption\nOr long press the list into the edit state in the [more] encryption"</string>
    <string name="welcome_start_use">"Start use"</string>
    <string name="welcome_not_use">"Temporarily not use"</string>
    <string name="welcome_ok">"GOT IT"</string>
    <string name="add_encrypt_files">Add encrypt file</string>
    <string name="delete_album">"Delete album"</string>
</resources>