<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Tcl Corporation Limited -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/sort_type"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_type"/>
    <item
        android:id="@+id/sort_name"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/sort_name"/>
    <item
        android:id="@+id/sort_size"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/sort_size"/>
    <item
        android:id="@+id/sort_time"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/sort_time"/>

</menu>
