<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Tcl Corporation Limited -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_dialog_edittext"
            android:layout_margin="15dp"
            android:layout_toStartOf="@+id/btn_show_password"
            android:hint="@string/input_password"
            android:maxLength="12"
            android:password="true"
            android:inputType="number"
            android:textSize="@dimen/edit_text_view_text_size"
            style="@style/rectangleEdittextStyle" />


        <ImageView
            android:id="@+id/btn_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:padding="3dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_eye_off" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password_dialog_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/forget_password"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/password_dialog_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/others"
            android:textSize="14sp"
             />


    </RelativeLayout>

</LinearLayout>
