<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Tcl Corporation Limited -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/permission_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/permission_welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/permission_welcome_title_top"
        android:gravity="center"
        android:fontFamily="monster-medium"
        android:text="@string/permission_welcome_title"
        android:textColor="@color/peimission_text_color"
        android:textSize="@dimen/permission_welcome_title_size" />
    <TextView
        android:layout_below="@+id/permission_welcome_title"
        android:id="@+id/permission_welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/permission_msg"
        android:textColor="@color/peimission_text_color"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/permission_welcome_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/permission_top_margin"
        android:src="@drawable/permission_enter" />

    <TextView
        android:id="@+id/permission_deny_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/permission_deny_title_bottom"
        android:layout_marginLeft="@dimen/permission_deny_title_left"
        android:layout_marginTop="@dimen/permission_deny_title_top"
        android:fontFamily="monster-medium"
        android:text="@string/permission_setting_title"
        android:textColor="@color/peimission_text_color"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/permission_deny_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/permission_deny_title"
        android:layout_marginBottom="@dimen/permission_deny_content_bottom"
        android:layout_marginLeft="@dimen/permission_deny_title_left"
        android:layout_marginRight="@dimen/permission_deny_title_left"
        android:fontFamily="monster-normal"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/permission_setting_content"
        android:textColor="@color/peimission_text_color"
        android:textSize="@dimen/permission_deny_content_size" />

    <ImageView
        android:id="@+id/permission_deny_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/permission_deny_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/permission_deny" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/permission_deny_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#66ffffff" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:id="@+id/permission_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/permission_setting_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                style="?android:attr/buttonBarButtonStyle"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textColor="@color/peimission_text_color"
                android:textSize="@dimen/permission_setting_size" />

            <LinearLayout
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/permission_setting_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/permission_setting_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/permission_setting_size" />

                <ImageView
                    android:id="@+id/permission_setting_nav"
                    android:layout_width="@dimen/permission_setting_nav_width"
                    android:layout_height="@dimen/permission_setting_nav_width"
                    android:src="@drawable/as_75" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
